# tinyDA

./: Chain-TransportMap.ipynb  Chain.ipynb  DAChain-AEM.ipynb  DAChain.ipynb  Delayed Acceptance with Adaptive Error Model.ipynb  Fetching DAChain.ipynb  LICENSE  MultipleTry Proposal.ipynb  Parallel DAChain.ipynb  Parallel Delayed Acceptance.ipynb  README.md  pyproject.toml  requirements.in  requirements.txt  setup.cfg
docs/: conf.py  index.rst  requirements.in  requirements.txt
docs/modules/: chains.rst  diagnostics.rst  distributions.rst  link_factories.rst  posterior.rst  proposals.rst  sampler.rst  samplers.rst  utils.rst
examples/: Base Sampler.ipynb  Basic Sampler.ipynb  Delayed Acceptance with Adaptive Error Model copy.ipynb  Delayed Acceptance with Adaptive Error Model.ipynb  Delayed Acceptance with Random Subchain Lengths.ipynb  Delayed Acceptance.ipynb  MALA Rosenbrock.ipynb  Multilevel Delayed Acceptance.ipynb  MultipleTry Proposal.ipynb  Operator-weighted pCN.ipynb  Parallel Delayed Acceptance.ipynb  Parallel Fetching Delayed Acceptance.ipynb  Poisson Point Process.ipynb  Population DREAM(Z).ipynb  UM-Bridge Integration.ipynb
tests/: pytest.ini  shared_archive_proposal_tests.py
tinyDA/: __init__.py  chain.py  chain_async.py  diagnostics.py  distributions.py  link.py  posterior.py  proposal.py  ray.py  sampler.py  transportmap.py  umbridge.py  utils.py
tutorial/Example_1/: gravity.py  gravity_tinyDA.py
tutorial/Example_2/: Example_2 Sampler.ipynb  Example_2 Setup.ipynb
tutorial/Example_2/gwflow/: GwFlow2D.py  Model.py  RandomProcess.py  __init__.py
tutorial/Tutorial_0/: LynxHare.txt  Tutorial.ipynb  tutorial_tinyDA.py
