[tool.poetry]
name = "tinyDA"
version = "0.9.8"
description = "Delayed Acceptance MCMC Sampler"
license = "MIT"
authors = ["Mikkel Bue Lykkegaard <mikkelbue@gmail.com>"]
readme = "README.md"
repository = "https://github.com/mikkelbue/tinyDA"
documentation = "https://tinyda.readthedocs.io"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/mikkelbue/tinyDA/issues"

[tool.poetry.dependencies]
arviz = "^0.12.1"
matplotlib = "^3.5.2"
numpy = "^1.23.0"
python = ">=3.8,<3.12"
tqdm = "^4.64.0"
scipy = "^1.8.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
