[tool.poetry]`
name = "tinyda"
version = "0.9.21"
description = "Delayed Acceptance MCMC Sampler"
license = "MIT"
authors = [
    "Mikkel Bue Lykkegaard <mikkelbue@gmail.com>",
    "Sai-Aakash Ramesh",
    "Louise Kluge",
    "Ondřej Šimůnek",
    "Jan Brezina",
]
readme = "README.md"
repository = "https://github.com/mikkelbue/tinyda"
documentation = "https://tinyda.readthedocs.io"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
packages = [{include = "tinyDA"}]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/mikkelbue/tinyDA/issues"

[tool.poetry.dependencies]
arviz = "^0.18.0"
matplotlib = "^3.8.0"
numpy = "^1.26.0"
python = ">=3.10,<4.0.0"
tqdm = "^4.66.0"
scipy = "^1.12.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
black = "^23.12.1"
pytest = "^7.4.4"
nbmake = "^1.4.6"
umbridge = "^1.2.4"
ray = "^2.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
