[metadata]
name = tinyDA
version = 0.9.3
author = Mikkel Bue Lykkegaard
author_email = mikkelbue@gmail.com.com
description = Delayed Acceptance MCMC Sampler
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mikkelbue/tinyDA
project_urls =
    Bug Tracker = https://github.com/mikkelbue/tinyDA/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = tinyDA
python_requires = >=3.6
install_requires = 
    numpy
    scipy
    matplotlib
    pandas
    seaborn
    tqdm
