[metadata]
name = tinyDA
version = 0.9.7
author = Mikkel Bue Lykkegaard
author_email = mikkelbue@gmail.com
description = Delayed Acceptance MCMC Sampler
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mikkelbue/tinyDA
project_urls =
    Bug Tracker = https://github.com/mikkelbue/tinyDA/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = tinyDA
python_requires = >=3.6
install_requires = 
    numpy
    scipy
    matplotlib
    pandas
    seaborn
    arviz
    tqdm
